# contact_book

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: conf.py  index.html  index.rst
migrations/: env.py
migrations/versions/: 165163ec3e6a_init.py  2d34556c98d5_init.py  3fbdeb9d01e4_init.py  746920cbb4d3_add_users.py  77652c0b7ff5_init.py  a3181dcca654_init.py  bd9dae2eb5f4_init.py  d5e6d9b44ceb_init.py  d62a80b2ebff_init.py  fbff1afb2ef4_add_users.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contact.py  users.py
src/routes/: auth.py  contact.py  contacts.py  users.py
src/service/: auth.py  email.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html
tests/: conftest.py  test_main.py  test_routes_auth.py  test_routes_contacts.py  test_routes_users.py  test_unit_repository_contact.py  test_unit_repository_users.py
